--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        
+<nav>
+    <h3 class="logo">INANCE</h3>
+    <ul>
+        <li><a href="" acitve>Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Services</a></li>
+        <li><a href="">Contact Us</a></li>
+    </ul>
+</nav>
+    </header>
 </body>
 </html>
