added banner section

--- a/index.html
+++ b/index.html
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        
-<nav>
-    <h3 class="logo">INANCE</h3>
-    <ul>
-        <li><a href="" acitve>Home</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Services</a></li>
-        <li><a href="">Contact Us</a></li>
-    </ul>
-</nav>
+      <div class="top_nav">
+        <p><i class="fa-solid fa-phone"></i> Call: +01922459174</p>
+        <p><i class="fa-solid fa-envelope"></i> Email: shamimmahmud077@gmail.com</p>
+      </div>
+      <!-- ==============Navbar============ -->
+      <nav>
+        <h3 class="logo">INANCE</h3>
+        <ul>
+          <li><a href="" acitve>Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Services</a></li>
+          <li><a href="">Contact Us</a></li>
+        </ul>
+      </nav>
+
+      <!-- <================banner section===============> -->
+
+      <section class="banner_section">
+<div class="banner_text_content">
+    <h1>Repair and <br>
+        Maintenance <br>
+        Services</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui harum voluptatem adipisci. Quos molestiae saepe dicta nobis pariatur, tempora iusto, ad possimus soluta hic praesentium mollitia consequatur beatae, aspernatur culpa.
+
+            CONTACT US</p>
+            <button class="button">contact us</button>
+</div>
+<img src="img/slider-img.png" alt="banner_img">
+      </section>
     </header>
-</body>
+  </body>
 </html>
