add some fixing

--- a/index.html
+++ b/index.html
@@ -38,6 +38,23 @@
 </div>
 <img src="img/slider-img.png" alt="banner_img">
       </section>
+
+      <div class="banner_card">
+        <div class="single_card">
+            <i class="fa-solid fa-screwdriver"></i>
+            <h3>repair</h3>
+        </div>
+
+        <div class="single_card center_card">
+            <i class="fa-solid fa-database"></i>
+            <h3>improve</h3>
+        </div>
+
+        <div class="single_card">
+            <i class="fa-solid fa-mountain-city"></i>
+            <h3>maintain</h3>
+        </div>
+      </div>
     </header>
   </body>
 </html>
